--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -3,14 +3,13 @@
 	--container-padding: 15px;
 
 	--font-main: 'Roboto', sans-serif;
-	--font-accent: 'Manrope', sans-serif;
+	--font-accent: 'Montserrat', sans-serif;
 	--font-titles: var(--font-accent);
-	--font-titles2: 'bebasneueregular', sans-serif;
-
+	
 	--page-bg: #fff;
 	--text-color: #000;
-	--accent: #b52670;
-	--accent-2: #00205B;
+	--accent: #ea6211;
+	--accent-2: #47af4b;
 	--link-color: #000;
 	--bg-color: rgb(128, 128, 128, 0.15);
 
