--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -1,79 +1,48 @@
 .about{
     padding-top: 45px;
     width: 100%;
-    // height: 100vh;     
-    background-image: url('./../../img/bg-01@2x.jpg');
-    background-position: center center; /* x y */
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
-    
-    @include mediaBg(){
-        background-image: url('./../../img/bg-01.jpg');
-    }
-    
-    @include mobile {
-        background-position: -490px center; /* x y */
-        height: 100vh;
-    }
-
- }
- 
-.about::before{
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: #000;
-    opacity: 0.15;      
-}
-
- .about__flex{
+    background: var(--accent);    
+}       
+.about__flex{
     display: flex;
-    flex-direction: row-reverse;
+    justify-content: space-between;
     width: 100%;
     padding-top: 70px;
-    color: #fff;
+    color: #fff;              
+    margin-top: 100px;
+}
 
-       @include mobile {        
-        flex-direction: column;
-        align-items: center;
-    }       
+.about__title {
+    width: 50%;
+    height: auto;
+    font-size: clamp(4.5rem, 2.2rem + 1.2vw, 3.5rem);
+    font-family: var(--font-titles);
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 20px;
+    z-index: 1;
+    padding-bottom: 400px;
 }
 
  .about__desc {
-    width: 50%;
-    height: 600px; 
     display: flex;
-    padding: 20px;
+    font-size: clamp(2rem, 1.2rem + 0.5vw, 1.5rem);
     flex-direction: column;
-    text-align: center;
-    gap: 30px;
-    
-    @include tablet {
-        gap: 0;
-        height: auto;
-    }
-    @include mobile {
-        width: 100%;
-        
-    }
+    // text-align: center;
+    gap: 30px;     
  }
 
-.about__text {
-     display: flex;
-     margin-top: 110px;
-     font-size: clamp(1.5rem, 1.2rem + 1.2vw, 2.1rem) ;
-     line-height: 1.4;
-     text-align: center;
-     z-index: 1;
+ .about__product-title{
+    font-size: clamp(3.5rem, 1.2rem + 0.5vw, 2rem);
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 20px;
+    z-index: 1;
+    color: #000;
 
-     @include mobile {
-         margin-top: 135px;
-     }
-}
+ }
 
 .about__btns{
     width: 100%;    
