--- a/src/scss/blocks/_icons.scss
+++ b/src/scss/blocks/_icons.scss
@@ -74,14 +74,15 @@
 		box-shadow: 0 2px 8px rgba(0, 0, 0, 0.9);
 	}
 }
-.icon--new,
-.icon--service,
-.icon--delivery,
-.icon--presentation {
+.icon--license,
+.icon--shield,
+.icon--emergency,
+.icon--control,
+.icon--complex-protection {
 	width: 70px;
 	height: 70px;
 	fill:var(--accent);
-	// stroke: var(--accent-2);
+	stroke: var(--accent-2);
 
 	@include mobile {
 		width: 50px;
