--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -1,5 +1,5 @@
 .about{
-    padding-top: 45px;
+    padding: 45px 0;
     width: 100%;
     background: var(--accent);    
 }       
@@ -9,46 +9,62 @@
     width: 100%;
     padding-top: 70px;
     color: #fff;              
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 .about__title {
     width: 50%;
     height: auto;
-    font-size: clamp(4.5rem, 2.2rem + 1.2vw, 3.5rem);
+    font-size: clamp(4.3rem, 2.2rem + 1.2vw, 3.5rem);
     font-family: var(--font-titles);
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 20px;
-    z-index: 1;
-    padding-bottom: 400px;
+    text-align: left;
 }
 
  .about__desc {
     display: flex;
-    font-size: clamp(2rem, 1.2rem + 0.5vw, 1.5rem);
-    flex-direction: column;
-    // text-align: center;
-    gap: 30px;     
+    font-size: clamp(1.8rem, 1.2rem + 0.5vw, 1.5rem);
+    flex-direction: column;  
+    justify-content: space-between;
+    padding-bottom: 40px;
+    font-weight: 300;    
  }
 
  .about__product-title{
-    font-size: clamp(3.5rem, 1.2rem + 0.5vw, 2rem);
+    font-size: clamp(4.8rem, 2.2rem + 1.2vw, 3.5rem);
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 20px;
     z-index: 1;
     color: #000;
+ }
 
+ .about__consult{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: baseline;
+    gap: 20px;
+    margin-top: 15px;    
+    font-size: clamp(1.5rem, 1.2rem + 0.5vw, 1.5rem);
+    color: #000;
+    border: 1px solid #000;
+    padding: 20px;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
  }
 
 .about__btns{
-    width: 100%;    
+    width: 30%;    
     margin-top: 60px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     
     @include tablet {
         flex-direction: column;
@@ -77,6 +93,14 @@
     z-index: 1;
 }
  
-     
+.about__list {
+    display: flex;
+    margin: 0 auto;   
+    gap: 20px;
+    margin-top: 20px;
+    padding-left: 20px;
+    font-size: clamp(1.5rem, 1.2rem + 0.5vw, 1.5rem);
+    color: #000;
+ }  
     
    
