--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -24,13 +24,20 @@
     text-align: left;
 }
 
+.about__title-small{
+    font-size: clamp(2.5rem, 2.2rem + 1.2vw, 3.5rem);
+    font-weight: 700;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 20px;
+    text-align: left;
+    letter-spacing: normal;
+}
  .about__desc {
     display: flex;
-    font-size: clamp(1.8rem, 1.2rem + 0.5vw, 1.5rem);
     flex-direction: column;  
     justify-content: space-between;
-    padding-bottom: 40px;
-    font-weight: 300;    
+    padding-bottom: 40px;        
  }
 
  .about__product-title{
@@ -41,56 +48,39 @@
     margin-bottom: 20px;
     z-index: 1;
     color: #000;
+}
+
+.about__product-subtitle{
+    font-size: clamp(1.8rem, 1.2rem + 0.5vw, 1.5rem);
+    font-weight: 300;
+    text-align: center;
+    margin-bottom: 20px;
+    z-index: 1;
+    color: #000;   
+
  }
 
  .about__consult{
     display: flex;
     width: 100%;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: center;
     gap: 20px;
     margin-top: 15px;    
     font-size: clamp(1.5rem, 1.2rem + 0.5vw, 1.5rem);
     color: #000;
     border: 1px solid #000;
-    padding: 20px;
+    padding: 40px;
     border-radius: 10px;
     background: #fff;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
  }
 
 .about__btns{
-    width: 30%;    
-    margin-top: 60px;
+    width: 30%;   
     display: flex;
     justify-content: center;
-    align-items: center;
-    
-    @include tablet {
-        flex-direction: column;
-        margin-top: 30px;
-        gap: 15px;
-        align-items: center;
-    }
-}
-
-.about__btns_company-btn{
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    z-index: 1;       
-}
-
-.about__shop{
-    display: flex;
-    flex-direction: column;
-    text-align: center;    
-}
-
-.about__btns_shop-btn{
-    display: flex;
-    text-align: center;
-    z-index: 1;
+    align-items: center;    
 }
  
 .about__list {
