--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -72,7 +72,7 @@
     border: 1px solid #000;
     padding: 40px;
     border-radius: 10px;
-    background: #fff;
+    background: rgb(255, 255, 255);
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
  }
 
