--- a/src/html/blocks/templates/feedbacks-swiper.html
+++ b/src/html/blocks/templates/feedbacks-swiper.html
@@ -1,5 +1,5 @@
   <!-- Swiper -->
-  <div class="swiper1 mySwiper1">
+  <div class="swiper mySwiper">
     <div class="swiper-wrapper">
         @@loop('feedbacks-slide.html', './data/feedbacks.json')
     </div>
