--- a/src/scss/blocks/_feedbacks-swiper.scss
+++ b/src/scss/blocks/_feedbacks-swiper.scss
@@ -12,12 +12,13 @@
   .feedbacks__swiper{
     width: 60%;
     overflow: hidden;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin: 0 auto;
+    
+    
 }
 
   .swiper-wrapper {
-    height:fit-content !important;
+    // height:fit-content !important;
   }
   
   .swiper-slide {
