--- a/src/scss/blocks/_why.scss
+++ b/src/scss/blocks/_why.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     align-items: end;
+    justify-content: space-between;
     
     content: "";
     left: 0px;
@@ -31,7 +32,7 @@
     flex-direction: column;        
 }
 
-.why__list {
+.why__list-wrapper{
     display: flex;
     width: 100%;
     flex-direction: column;
@@ -42,6 +43,28 @@
     padding: 20px;
     border-radius: 12px;
     background: rgb(234, 98, 17, 0.85);
+}
+
+.why__list {
+    display: flex;
+    flex-direction: column;        
+}
+
+.why__list-title{
+    text-decoration: underline wavy;
+    
+    
+}
+
+.why__subtitle{
+    width: 50%;
+    font-size: 28px;
+    font-weight: 700;
+    color: #000;
+    padding: 20px;
+    border-radius: 12px;
+    background: rgb(255, 255, 255, 0.55);
+    margin-bottom: 50px;   
 }
 
 .why__list li{
