--- a/src/scss/blocks/_cta.scss
+++ b/src/scss/blocks/_cta.scss
@@ -10,8 +10,24 @@
     padding: 0 40px;
 }
 
+.cta__left-side{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    margin: 0 auto;
+    padding: 40px;
+    background: #f8f9fa;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    align-items: center;
+}
+
 .cta__socials{
     width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .cta__form {
