--- a/src/scss/blocks/_icons.scss
+++ b/src/scss/blocks/_icons.scss
@@ -60,8 +60,12 @@
 }
 
 .icon-social{
+	fill: transparent;
+	stroke: transparent;
+	
 	width: 50px;
-	height: 50px;	
+	height: 50px;
+	
 }
 
 .icon--email,
@@ -85,19 +89,6 @@
 	}
 }
 
-.icon--close {
-	width: 25px;
-	height: 25px;
-	border-radius: 50%;
-	color: var(--accent-2);
-	transition: all 0.2s ease-in;
-		
-	&:hover{
-		scale: 1.5;
-		background-color: pink;
-		box-shadow: 0 2px 8px rgba(0, 0, 0, 0.9);
-	}
-}
 .icon--license,
 .icon--shield,
 .icon--emergency,
@@ -114,28 +105,6 @@
 	}
 }
 
-.icon--shield {
-	width: 70px;
-	height: 70px;
-	fill: var(--accent);
-	// stroke: var(--accent-2);
 
-	@include mobile {
-		width: 50px;
-		height: 50px;
-	}
-}
 
-@keyframes move {
-	0%, 100%{
-		transform: translateY(0rem);
-	}
-	50%{
-		transform: translateY(-0.5rem);
-	}	
-}
-
-.show-scroll-btn{
-	bottom: 3rem;
-}
 
