--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -23,6 +23,9 @@
 	--tablet-size: 959px;
 	--mobile-size: 599px;
 	--small-mobile-size:374px;
+
+	--swiper-pagination-top: 400px;
+	--swiper-theme-color: var(--accent) !important;
 }
 
 .dark {
