--- a/src/scss/blocks/_bonus.scss
+++ b/src/scss/blocks/_bonus.scss
@@ -1,12 +1,17 @@
 .bonus {
     margin: var(--section-margin-top);
 }
-.bonus__wrapper {
-}
-.bonus__title {
-}
+
 .bonus__list {
-    margin-top: var(--section-margin-top);
+    display: flex;
+    align-items: center;
+    gap: 20px;
 }
 .bonus__list-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    font-size: 20px;
+    font-weight: 600;
 }
