--- a/src/scss/blocks/_benefits.scss
+++ b/src/scss/blocks/_benefits.scss
@@ -25,6 +25,12 @@
    width: 200px;
    text-align: center;
    transition: all 0.2s ease-in;
+   margin-top: 40px;
+
+//    background: #f8f9fa;
+   border-radius: 10px;
+   border: 1px solid #f8f9fa;
+   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
    
 }
 
