--- a/src/scss/blocks/_feedbacks-swiper.scss
+++ b/src/scss/blocks/_feedbacks-swiper.scss
@@ -93,6 +93,13 @@
     cursor: pointer;
     align-items: center;
     justify-content: center;
+    transition: all 0.2s ease-in;
+    
+    &:hover{
+        opacity: 0.8;
+    }
+
+
 }
 
 .swiper-pagination {
