--- a/src/scss/blocks/_titles.scss
+++ b/src/scss/blocks/_titles.scss
@@ -13,7 +13,6 @@
 }
 
 .title-1 {
-	// font-size: 120px;
 	font-size: clamp(3rem, 1.364rem + 8.18vw, 7.5rem);
 	font-family: var(--font-titles);
 	text-transform: uppercase;
@@ -21,7 +20,7 @@
 
 .title-2 {
 	margin: 1em 0 0.5em;
-	font-size: 42px;
+	font-size: 80px;
 	font-weight: 700;
 	font-family: var(--font-titles2);
 	text-transform: uppercase;
@@ -37,7 +36,7 @@
 
 .title-3 {
 	margin: 1em 0 0.5em;
-	font-size: 26px;
+	font-size: 40px;
 	font-weight: 700;
 	font-family: var(--font-titles2);
 	letter-spacing: 1.5px;
@@ -51,7 +50,7 @@
 
 .title-4 {
 	margin: 1em 0 0.5em;
-	font-size: 18px;
+	font-size: 24px;
 	font-weight: 700;
 	font-family: var(--font-titles);
 
@@ -61,4 +60,19 @@
 }
 .colored{
 	color: var(--accent);
+}
+
+.item-subtitle {
+	font-weight: 600;
+	color: var(--accent);
+}
+
+.item-subtitle a{
+	color: var(--accent-2);
+	opacity: 0.7;
+	transition: all 0.2s ease-in;
+	
+	&:hover{
+		opacity: 1;
+	}
 }
