--- a/src/scss/blocks/_why.scss
+++ b/src/scss/blocks/_why.scss
@@ -1,16 +1,14 @@
 .why__header{
     display: flex;
-    flex-direction: column;
     align-items:center;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .why__wrapper{
     display: flex;
     flex-direction: column;
     align-items: end;
-    justify-content: space-between;
-    
+    justify-content: flex-end;    
     content: "";
     left: 0px;
     top: 0px;
@@ -32,54 +30,56 @@
     flex-direction: column;        
 }
 
-.why__list-wrapper{
-    display: flex;
+.why__desc{
     width: 100%;
-    flex-direction: column;
-    font-size: 28px;
+    font-size: 30px;
     font-weight: 700;
+    line-height: 1.5;
     color: #000;
-    gap: 15px;
-    padding: 20px;
+    padding: 60px 40px;
     border-radius: 12px;
-    background: rgb(234, 98, 17, 0.85);
-}
-
-.why__list {
-    display: flex;
-    flex-direction: column;        
-}
-
-.why__list-title{
-    text-decoration: underline wavy;
-    
-    
-}
-
-.why__subtitle{
-    width: 50%;
-    font-size: 28px;
-    font-weight: 700;
-    color: #000;
-    padding: 20px;
+    margin-bottom: 50px;
     border-radius: 12px;
-    background: rgb(255, 255, 255, 0.55);
-    margin-bottom: 50px;   
+    background: rgb(234, 98, 17, 0.9);
+       
+}
+
+.why__logo{
+    width: 300px;
+    height: 300px;
+}
+
+.why__list ul{
+    padding: 20px;
+}
+
+.why__list-item{
+    padding: 20px;
+    background: #f8f9fa;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
 }
 
 .why__list li{
     list-style: disc;
 }
+
 .list-item {
     margin-left: 20px;
 }
 
-.why__bonus {
-    color:#fff;
-}
-
-.bonus-title {
-}
-
 .bonus__list {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
+.bonus__list-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    font-size: 20px;
+    font-weight: 600;
 }
