--- a/src/scss/blocks/_titles.scss
+++ b/src/scss/blocks/_titles.scss
@@ -65,14 +65,6 @@
 .item-subtitle {
 	font-weight: 600;
 	color: var(--accent);
+	margin: 20px 0;
 }
 
-.item-subtitle a{
-	color: var(--accent-2);
-	opacity: 0.7;
-	transition: all 0.2s ease-in;
-	
-	&:hover{
-		opacity: 1;
-	}
-}
