--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -30,12 +30,12 @@ aside, nav, footer, header, section, main {
 h1, h2, h3, h4, h5, h6, p {
     font-size: inherit;
 	font-weight: inherit;
-	text-wrap: balance;
+	// text-wrap: balance;
 }
 p {
     font-size: inherit;
 	font-weight: inherit;
-	text-wrap: pretty;
+	// text-wrap: pretty;
 }
 
 ul, ul li {
