--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -38,7 +38,8 @@
     display: flex;
     flex-direction: column;  
     justify-content: space-between;
-    padding-bottom: 40px;        
+    padding-bottom: 40px;
+    padding-top: 50px;      
  }
 
  .about__product-title{
