--- a/src/scss/blocks/_benefits.scss
+++ b/src/scss/blocks/_benefits.scss
@@ -27,7 +27,6 @@
    transition: all 0.2s ease-in;
    margin-top: 40px;
 
-//    background: #f8f9fa;
    border-radius: 10px;
    border: 1px solid #f8f9fa;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -63,6 +62,8 @@
 }
 
 .benefits__item-desc{
+    font-size: 16px;
     margin-top: auto;
+    text-align: center;
     
 }
