--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -18,7 +18,8 @@
 }
 
 .footer__left-side p{
-	font-size: 22px;
+	font-size: 24px;
+	line-height: 1.5;
 }
 
 .footer__data a{
@@ -34,14 +35,13 @@
 .footer__copyright {
 	margin-top: 47px;
 	padding: 10px 0;
-	font-size: 16px;
+	font-size: 20px;
 	
 	@include mobile {
 		margin-top: 15px;
 		font-size: 14px;
 	}
 }
-
 
 .footer__right-side{
 	margin-top: 140px;
@@ -50,4 +50,3 @@
 		margin-top: 10px;
 	}
 }
-
