--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -1,13 +1,8 @@
 .form{
-    // display: flex;
-    // flex-direction: column;
-    // padding: 30px;
-    // align-items: center;
-    // justify-content: center;
-    // position: relative;
     width: 100%;
     margin: 0 auto;
-    padding: 40px;
+    padding: 20px;
+    padding-top: 30px;
     background: #f8f9fa;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -39,7 +34,6 @@
     opacity: 1;
     visibility: visible;
 }
-
 
 .form input, .form textarea {
     width: 100%;
@@ -113,6 +107,10 @@
     color: var(--accent);
     pointer-events: all;
     cursor: pointer;
+
+    &:hover{
+        color: var(--accent-2);
+    }
 }
 
 .checkbox__label::after{
