--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -13,19 +13,22 @@
 }
 
 .about__title {
+    margin-bottom: 20px;
+    padding-top: 40px;
+    padding-left: 40px;
     width: 50%;
     height: auto;
-    font-size: clamp(4.3rem, 2.2rem + 1.2vw, 3.5rem);
+    font-size: 44px;
     font-family: var(--font-titles);
     font-weight: 700;
-    text-transform: uppercase;
-    text-align: center;
-    margin-bottom: 20px;
     text-align: left;
+    text-transform: uppercase;
+    
+    
 }
 
 .about__title-small{
-    font-size: clamp(2.5rem, 2.2rem + 1.2vw, 3.5rem);
+    font-size: 32px;
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
@@ -43,7 +46,7 @@
  }
 
  .about__product-title{
-    font-size: clamp(4.6rem, 2.2rem + 1.2vw, 3.5rem);
+    font-size: 44px;
     font-weight: 700;
     text-transform: uppercase;
     text-align: center;
@@ -129,15 +132,13 @@
     justify-content: center;
     align-items: center;    
 }
- 
-.about__list {
+ .about__list {
     display: flex;
-    margin: 0 auto;   
     gap: 20px;
+    justify-content: space-between;
     margin-top: 20px;
-    padding-left: 20px;
     font-size: clamp(1.5rem, 1.2rem + 0.5vw, 1.5rem);
-    color: #000;
+    color: #000;  
  }  
+
     
-   
