--- a/src/scss/blocks/_titles.scss
+++ b/src/scss/blocks/_titles.scss
@@ -13,14 +13,14 @@
 }
 
 .title-1 {
-	font-size: clamp(3rem, 1.364rem + 8.18vw, 7.5rem);
+	// font-size: clamp(3rem, 1.364rem + 8.18vw, 7.5rem);
 	font-family: var(--font-titles);
 	text-transform: uppercase;
 }
 
 .title-2 {
 	margin: 1em 0 0.5em;
-	font-size: 80px;
+	font-size: 50px;
 	font-weight: 700;
 	font-family: var(--font-titles2);
 	text-transform: uppercase;
@@ -36,7 +36,7 @@
 
 .title-3 {
 	margin: 1em 0 0.5em;
-	font-size: 40px;
+	font-size: 30px;
 	font-weight: 700;
 	font-family: var(--font-titles2);
 	letter-spacing: 1.5px;
