--- a/src/scss/blocks/_mobile-nav.scss
+++ b/src/scss/blocks/_mobile-nav.scss
@@ -1,43 +1,40 @@
 .mobile-nav {
 	position: fixed;
-	// top: -100%;
-	max-width: 320px;
+	top: -100%;
+	right: 0;
+	width: 100%;
+	height: 100%;
     z-index: 99;
 
 	display: flex;
-    flex-direction: column;
-    align-items: center;
-	top: 52px;
-	padding: 20px;
-    background: #fff;
-	border-radius: 0 0 5px 0;
-	transform: translateX(-100%); 
-	transition: all 0.2s ease-in;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 10px;
 
-	@include small-mobile{
-		top: 40px;
-	}
+	background: var(--accent);
+	color: #fff;
+	transition: all 0.2s ease-in;
 }
 
-.mobile-nav--open {
-	transform: translateX(0); /* Показываем меню */
-
+.mobile-nav--open {	
+	padding: 10px 12px;
+	top: 150px;
 }
 
 .mobile-nav a {
-	color: var(--accent-2);
+	color: #fff;
 }
 
 .mobile-nav__list {
 	display: flex;
 	flex-direction: column;
-	// align-items: center;
-	row-gap: 20px;
-	font-size: 14px;
-	text-transform: uppercase;
+	align-items: center;
+	gap: 30px;
+	font-size: 28px;
+	text-transform: uppercase; ;
 
 	& .active {
 		opacity: 0.5;
 	}
 }
-
