--- a/src/scss/blocks/_video.scss
+++ b/src/scss/blocks/_video.scss
@@ -1,5 +1,14 @@
+.video__wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 20px;    
+}
+
 iframe{
     width: 100%;
-    max-height: 600px;
+    max-height: 450px;
 
 }
