--- a/src/html/blocks/templates/table.html
+++ b/src/html/blocks/templates/table.html
@@ -1,26 +1,26 @@
   <table>
         <tr>
             <th>Продукт</th>
-            <th>Количество услуг</th>
+            <th>Количество устройств</th>
             <th>Оплата за месяц</th>
             <th>Оплата за год</th>
         </tr>
         <tr>
-            <td>Продукт 1</td>
-            <td>10</td>
-            <td>500 ₽</td>
-            <td>5000 ₽</td>
+            <td>Worry Free Services</td>
+            <td>1-25</td>
+            <td>7.10 €</td>
+            <td>6.0 €</td>
         </tr>
         <tr>
-            <td>Продукт 2</td>
-            <td>20</td>
-            <td>900 ₽</td>
-            <td>9000 ₽</td>
+            <td>Worry Free Services</td>
+            <td>26-50</td>
+            <td>5.10 €</td>
+            <td>4.90 €</td>
         </tr>
         <tr>
-            <td>Продукт 3</td>
-            <td>30</td>
-            <td>1300 ₽</td>
-            <td>13000 ₽</td>
+            <td>Worry Free Services</td>
+            <td>51-100</td>
+            <td>4.50 €</td>
+            <td>4.30 €</td>
         </tr>
     </table>
