--- a/src/scss/blocks/_table.scss
+++ b/src/scss/blocks/_table.scss
@@ -10,7 +10,5 @@ th, td {
 }
 th {
     background-color: #f4f4f4;
-}
-tr:nth-child(even) {
-    background-color: #f9f9f9;
+    color: var(--accent-2)
 }
