--- a/src/html/blocks/templates/table.html
+++ b/src/html/blocks/templates/table.html
@@ -6,19 +6,19 @@
             <th>Оплата за год</th>
         </tr>
         <tr>
-            <td>Worry Free Services</td>
+            <td class="table__product-name">Worry Free Services</td>
             <td>1-25</td>
             <td>7.10 €</td>
             <td>6.0 €</td>
         </tr>
         <tr>
-            <td>Worry Free Services</td>
+            <td class="table__product-name">Worry Free Services</td>
             <td>26-50</td>
             <td>5.10 €</td>
             <td>4.90 €</td>
         </tr>
         <tr>
-            <td>Worry Free Services</td>
+            <td class="table__product-name">Worry Free Services</td>
             <td>51-100</td>
             <td>4.50 €</td>
             <td>4.30 €</td>
