--- a/src/scss/blocks/_feedbacks.scss
+++ b/src/scss/blocks/_feedbacks.scss
@@ -1,8 +1,8 @@
-.feedback {
-    margin-top: var(--section-margin-top);
+.feedbacks {
+    padding-top: var(--section-padding-top);
 }
 .feedbacks__slaider {
-    margin-top: var(--section-margin-top);
+    padding-top: var(--section-padding-top);
 }
 .feedbacks__swiper {
 }
