--- a/src/scss/blocks/_table.scss
+++ b/src/scss/blocks/_table.scss
@@ -2,12 +2,17 @@ table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
+   
 }
 th, td {
     border: 1px solid #ddd;
     padding: 10px;
     text-align: left;
 }
+td.table__product-name{
+    font-weight: 600;
+}
+
 th {
     background-color: #f4f4f4;
     color: var(--accent-2)
