--- a/src/scss/blocks/_logo.scss
+++ b/src/scss/blocks/_logo.scss
@@ -1,5 +1,6 @@
 .logo {
-    width: 150px;
+    width: 250px;
+    padding: 5px 0;
     @include tablet {
         // width: 200px;
     }   
@@ -14,7 +15,12 @@
 }
 
 .logo-small{
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
+}
 
+.logo-squere{
+    width: 250px;
+    height: 250px;
+    padding: 20px;
 }
