--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -2,7 +2,7 @@
 	position: relative;
 	padding: 25px 10px;
 	background-color: #000;
-	margin-top: var(--section-margin-top);	
+	margin-top: var(--section-padding-top);	
 }
 
 .footer__row {
