--- a/src/scss/blocks/_why.scss
+++ b/src/scss/blocks/_why.scss
@@ -4,6 +4,11 @@
     justify-content: space-around;
 }
 
+.why__title{
+    font-size: 70px;
+
+}
+
 .why__wrapper{
     display: flex;
     flex-direction: column;
