--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -4,14 +4,19 @@
     }
 }
 
+@mixin desktop-sm () {
+    @media (max-width: 1210px) {
+		@content;
+	}
+}
 @mixin tablet () {
-    @media (max-width: 1175px) {
+    @media (max-width: 1160px) {
 		@content;
 	}
 }
 
 @mixin mobile () {
-    @media (max-width: 930px) {
+    @media (max-width: 940px) {
 		@content;
 	}
 }
