--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -10,6 +10,14 @@
     padding-top: 70px;
     color: #fff;              
     margin-top: 50px;
+    
+    @include mobile {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-top: 0;
+        margin-top: 0;
+    }
 }
 
 .about__title {
@@ -22,9 +30,7 @@
     font-family: var(--font-titles);
     font-weight: 700;
     text-align: left;
-    text-transform: uppercase;
-    
-    
+    text-transform: uppercase;   
 }
 
 .about__title-small{
@@ -124,21 +130,36 @@
     border-radius: 10px;
     background: rgb(255, 255, 255);
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    
+    @include mobile {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;  
+        padding: 20px;
+    }
  }
 
+ 
 .about__btns{
     width: 30%;   
     display: flex;
     justify-content: center;
     align-items: center;    
 }
+
  .about__list {
     display: flex;
     gap: 20px;
     justify-content: space-between;
     margin-top: 20px;
     font-size: clamp(1.5rem, 1.2rem + 0.5vw, 1.5rem);
-    color: #000;  
+    color: #000;
+    
+    @include mobile {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
  }  
-
     
