--- a/src/scss/blocks/_benefits.scss
+++ b/src/scss/blocks/_benefits.scss
@@ -37,7 +37,7 @@
     margin-top: 25px;
 
     @include mobile {
-        margin-top: 10px;
+        margin: 25px;
     }
 }
 
@@ -64,6 +64,5 @@
 .benefits__item-desc{
     font-size: 16px;
     margin-top: auto;
-    text-align: center;
-    
+    text-align: center;    
 }
