--- a/src/scss/blocks/_cta.scss
+++ b/src/scss/blocks/_cta.scss
@@ -1,7 +1,7 @@
 .cta{
     padding-top: var(--section-padding-top);
-
 }
+
 .cta__wrapper{
     width: 100%;
     display: grid;
@@ -9,6 +9,11 @@
     gap: 20px;
     margin-top: 20px;
     padding: 0 40px;
+
+    @include mobile {
+        grid-template-columns: 1fr;
+        padding: 0 20px;
+    }
 }
 
 .cta__left-side{
@@ -22,6 +27,10 @@
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     align-items: center;
+
+    @include tablet {
+        padding: 20px;        
+    }
 }
 
 .cta__socials, .cta__contacts{
@@ -29,6 +38,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include tablet {
+        flex-direction: column;
+        align-items: start;
+        gap: 30px;
+    }
+    @include mobile {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 30px;
+        gap: 30px;
+    }
 }
 
 .cta__contacts a {
@@ -39,8 +61,7 @@
 span.cta__email, span.cta__phone{
     margin-left: 10px;
     transition: all 0.2s ease-in;
-    font-weight: 600;
-    
+    font-weight: 600;   
 
     &:hover{
         color: var(--accent-2);
@@ -50,6 +71,10 @@ span.cta__email, span.cta__phone{
 .cta__socials-item{
     display: flex;
     align-items: center;
+
+    @include mobile {
+        gap: 20px;
+    }
 }
 
 .icon-text{
@@ -59,6 +84,12 @@ span.cta__email, span.cta__phone{
 
     &:hover{
         color: var(--accent-2);
+    }
+}
+
+.cta__img {
+    @include mobile {
+        display: none;
     }
 }
 
