--- a/src/scss/blocks/_feedbacks-swiper.scss
+++ b/src/scss/blocks/_feedbacks-swiper.scss
@@ -34,6 +34,12 @@
     display: flex;
     align-items: center;
     justify-content: left;
+
+    @include mobile {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
 .feedbacks__person {
     display: flex;
@@ -99,25 +105,18 @@
         opacity: 0.8;
     }
 
+    @include mobile {        
+        width: 50px;
+        height: 50px;
+    }
 
 }
 
 .swiper-pagination {
     top: var(--swiper-pagination-top);
-}
-
-@media (max-width: 768px) {
-    .swiper-slide {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .feedbacks__person {
-        width: 100%;
-    }
-
-    .feedbacks-slide__text {
-        width: 100%;
-        text-align: left;        
+    @include mobile {
+        display: none;
     }
 }
+
+
