--- a/src/scss/blocks/_logo.scss
+++ b/src/scss/blocks/_logo.scss
@@ -2,11 +2,11 @@
     width: 250px;
     padding: 5px 0;
     @include tablet {
-        // width: 200px;
+        width: 200px;
     }   
     
     @include mobile {
-        // width: 150px;        
+        width: 150px;        
     }
 
     @include small-mobile{
@@ -23,4 +23,9 @@
     width: 250px;
     height: 250px;
     padding: 20px;
+
+    @include mobile {
+        display: none;
+        
+    }
 }
