--- a/src/scss/blocks/_titles.scss
+++ b/src/scss/blocks/_titles.scss
@@ -1,17 +1,3 @@
-.title-group {
-	width: fit-content;
-	margin: 0 auto;
-	padding: 10px 30px;
-	display: flex;
-	justify-content: center;
-	margin-bottom: 30px;	
-	
-	@include mobile {
-		margin-bottom: 10px;
-		padding: 10px;
-	}
-}
-
 .title-1 {
 	// font-size: clamp(3rem, 1.364rem + 8.18vw, 7.5rem);
 	font-family: var(--font-titles);
@@ -20,31 +6,28 @@
 
 .title-2 {
 	margin: 1em 0 0.5em;
-	font-size: 50px;
+	// font-size: 50px;
+	font-size: clamp(1.563rem, 0.994rem + 2.84vw, 3.125rem);
 	font-weight: 700;
 	font-family: var(--font-titles2);
 	text-transform: uppercase;
 	text-align: center;
 	margin: 30px 20px 10px 20px;
 	letter-spacing: 3px;
-	
-	@include mobile {
-		font-size: 22px;
-		letter-spacing: 2px;		
-	}
 }
 
 .title-3 {
 	margin: 1em 0 0.5em;
-	font-size: 30px;
+	// font-size: 30px;
+	font-size: clamp(1.25rem, 1.023rem + 1.14vw, 1.875rem);
 	font-weight: 700;
 	font-family: var(--font-titles2);
 	letter-spacing: 1.5px;
 	text-transform: uppercase;
 
 	@include mobile {
-		font-size: 20px;
-		letter-spacing: 1.2px;
+		// font-size: 20px;
+		// letter-spacing: 1.2px;
 	}
 }
 
@@ -55,15 +38,8 @@
 	font-family: var(--font-titles);
 
 	@include mobile {
-		font-size: 16px;
+		// font-size: 16px;
 	}
-}
-.colored{
-	color: var(--accent);
-	
-}
-.colored2{
-	color: var(--accent-2);
 }
 
 .item-subtitle {
@@ -72,3 +48,11 @@
 	margin: 20px 0;
 }
 
+.why__title{
+	font-size: clamp(1.875rem, 0.966rem + 4.55vw, 4.375rem);
+
+	@include mobile {
+		margin: 0;
+	}
+
+}
