--- a/src/scss/blocks/_why.scss
+++ b/src/scss/blocks/_why.scss
@@ -4,11 +4,6 @@
     justify-content: space-around;
 }
 
-.why__title{
-    font-size: 70px;
-
-}
-
 .why__wrapper{
     display: flex;
     flex-direction: column;
@@ -94,6 +89,12 @@
     align-items: center;
     gap: 20px;
     padding: 20px;
+
+    @include mobile {
+        flex-direction: column;
+        align-items: start;
+        gap: 30px;
+    }
 }
 .bonus__list-item {
     display: flex;
@@ -106,5 +107,11 @@
 
     background: var(--accent-2);
     border-radius: 10px;
+
+    @include mobile {
+        flex-direction: column;
+        align-items: start;
+        gap: 10px;
+    }
 
 }
