--- a/src/scss/blocks/_partners.scss
+++ b/src/scss/blocks/_partners.scss
@@ -21,6 +21,9 @@
     gap: 20px;
     padding: 20px;
     align-items: center;
+    flex-wrap: wrap;
+
+    
 }
 
 .partners__gallery a{
@@ -65,6 +68,7 @@
     text-transform: uppercase;
     color: var(--accent); 
     text-decoration: solid underline #000;
+    flex-wrap: wrap;    
 
     @include desktop-sm{
         font-size: 20px;
